Fix text overflow p element

--- a/internal/static/css/01-pico.css
+++ b/internal/static/css/01-pico.css
@@ -374,7 +374,8 @@
      font-weight: normal; }
  
  p {
-   margin-bottom: 0.75rem; }
+   margin-bottom: 0.75rem;
+   word-break: break-all; }
  
  small {
    font-size: 85%; }
